# lexeme-party

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci-autofix.yml  ci-validate.yml  ci.yml
adapters/: AGENTS.md
adapters/arithmetic/: AGENTS.md  Cargo.toml
adapters/arithmetic/src/: lib.rs
adapters/keyboarding/: AGENTS.md  Cargo.toml
adapters/keyboarding/src/: lib.rs
client/: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  vite.config.ts
client/src/: app.css
client/src/lib/: randomColor.ts
client/src/lib/components/: Button.svelte  Select.svelte  TextInput.svelte
client/src/lib/game/: connection.svelte.ts  protocol.test.ts  protocol.ts  sim.test.ts  sim.ts
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/room/[code]/: +page.svelte
core/: AGENTS.md  Cargo.toml
core/src/: adapter.rs  game.rs  lib.rs  main.rs  powerup.rs  protocol.rs  server.rs
server/: AGENTS.md  Cargo.toml
server/src/: main.rs
src/: client.rs  main.rs  protocol.rs  server.rs  text.wgsl  words.rs
src/client/: game.rs  hud.rs  mod.rs  net.rs  render.rs
src/shaders/: circle.wgsl
static/: index.html
web/: index.html
