[package]
name = "lexeme-party"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net"] }
tower-http = { version = "0.6", features = ["fs"] }
