[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path = "../core" }
edif-io-keyboarding-adapter = { path = "../adapters/keyboarding" }
edif-io-arithmetic-adapter = { path = "../adapters/arithmetic" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
